# AutoKlotski

./: .gitignore  gui.py  klotski.py  readme.md  requirements.txt
cpp/: CMakeLists.txt  Klotski.cpp  State.cpp  klotski_bindings.cpp
cpp/include/: Klotski.h  Move.h  State.h
